--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lumaflex_ota">
+    package="com.example.flowser">
    <application
-        android:label="lumaflex_ota"
+        android:label="flowser"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
